--- a/app/src/main/res/drawable/answer_wrong_background.xml
+++ b/app/src/main/res/drawable/answer_wrong_background.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#ff0000"/>
-    <corners
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
-        />
+    <solid android:color="#ff0000" />
+    <corners android:radius="5dp" />
 </shape>
