--- a/app/src/main/res/drawable/next_button_background.xml
+++ b/app/src/main/res/drawable/next_button_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="160dp"/>
-    <stroke android:width="2dp" android:color="#000" />/>
+    <solid android:color="@color/colorPrimary"/>
+    <corners android:radius="10dp" />
 </shape>
