--- a/app/src/main/res/drawable/paper_summary_background.xml
+++ b/app/src/main/res/drawable/paper_summary_background.xml
@@ -3,5 +3,7 @@
     android:shape="rectangle">
     <solid android:color="@color/colorPrimary"/>
     <corners
-        android:radius="10dp"/>
+        android:topLeftRadius="25dp"
+        android:topRightRadius="25dp"
+        />
 </shape>
