--- a/app/src/main/res/drawable/question_background.xml
+++ b/app/src/main/res/drawable/question_background.xml
@@ -3,5 +3,6 @@
     android:shape="rectangle">
     <solid android:color="#ffffff"/>
     <corners
-        android:radius="10dp"/>
+        android:topLeftRadius="25dp"
+        android:topRightRadius="25dp" />
 </shape>
