--- a/app/src/main/res/layout/fragment_essay_answer.xml
+++ b/app/src/main/res/layout/fragment_essay_answer.xml
@@ -21,7 +21,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/essayQuestionAnswerLabel"
