--- a/app/src/main/res/layout/row_module_list.xml
+++ b/app/src/main/res/layout/row_module_list.xml
@@ -1,32 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="85dp"
-    android:background="@android:color/white"
-    android:descendantFocusability="blocksDescendants"
-    android:gravity="center_vertical"
-    android:minHeight="85dp"
-    android:orientation="horizontal"
-    android:padding="10dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    android:background="@android:color/transparent">
 
-    <TextView
-        android:id="@+id/moduleRowLabel"
-        style="@style/rowItemText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="TextView" />
+    <android.support.v7.widget.CardView
+        android:id="@+id/moduleCard"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:cardBackgroundColor="#fff"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <com.github.siyamed.shapeimageview.CircularImageView
-        android:id="@+id/moduleImageButton"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:adjustViewBounds="false"
-        android:background="@android:color/transparent"
-        android:scaleType="center"
-        android:src="@mipmap/ic_launcher"
-        app:siBorderAlpha="0.0"
-        app:siBorderWidth="0dp" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp">
 
-</LinearLayout>
+            <TextView
+                android:id="@+id/moduleRowLabel"
+                style="@style/rowItemText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                app:layout_constraintBottom_toTopOf="@+id/modulePaperCountCard"
+                app:layout_constraintEnd_toEndOf="@+id/modulePaperCountCard"
+                app:layout_constraintStart_toStartOf="@+id/modulePaperCountCard"
+                app:layout_constraintTop_toBottomOf="@+id/moduleImageButton" />
+
+            <ImageView
+                android:id="@+id/moduleImageButton"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:adjustViewBounds="false"
+                android:background="@android:color/transparent"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_logo_new"
+                app:layout_constraintBottom_toTopOf="@+id/moduleRowLabel"
+                app:layout_constraintEnd_toEndOf="@+id/moduleRowLabel"
+                app:layout_constraintStart_toStartOf="@+id/moduleRowLabel"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/modulePaperCountCard"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:cardBackgroundColor="@color/colorSecondary"
+                app:cardCornerRadius="3dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <TextView
+                    android:id="@+id/moduleRowPaperCount"
+                    android:layout_width="76dp"
+                    android:layout_height="19dp"
+                    android:gravity="center_vertical|center_horizontal"
+                    android:text="10 papers"
+                    android:textColor="#fff"
+                    android:textSize="10sp"
+                    android:textStyle="bold" />
+            </android.support.v7.widget.CardView>
+
+
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
+</android.support.constraint.ConstraintLayout>
