--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFC107</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <!-- old colors -->
     <color name="colorAccent">#FF4081</color>
     <color name="colorItemTint">#4a4a4a</color>
-    <color name="colorLightGrey">#F0F0F0</color>
     <color name="colorDeepPurple">#ECF1F3</color>
     <color name="colorBgGray">#ECF1F3</color>
     <color name="colorStudyBlue">#4990E2</color>
+
+    <!-- new colors -->
+    <color name="colorPrimary">#10ACDB</color>
+    <color name="colorPrimaryDark">#0FA0CC</color>
+    <color name="colorSecondary">#62BA47</color>
+    <color name="colorLightGrey">#F1F1F1</color>
+    <color name="colorMediumGrey">#979797</color>
+    <color name="colorDarkGrey">#707070</color>
 </resources>
