--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,15 +6,25 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:fontFamily">Roboto</item>
+        <item name="android:fontFamily">@font/montserrat</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">#000</item>
     </style>
 
+    <!-- bottom navigation -->
+    <style name="BottomNavigationView" parent="@style/TextAppearance.AppCompat.Caption">
+        <item name="android:textSize">10sp</item>
+    </style>
+
+    <style name="BottomNavigationView.Active" parent="@style/TextAppearance.AppCompat.Caption">
+        <item name="android:textSize">11sp</item>
+    </style>
+
     <!-- title text -->
     <style name="titleText">
-        <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/colorItemTint</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#ffffff</item>
+        <!--<item name="android:fontFamily">@font/montserrat</item>-->
     </style>
 
     <!-- alternative title text -->
@@ -31,14 +41,15 @@
 
     <!-- Row Item Text -->
     <style name="rowItemText">
-        <item name="android:textColor">#4A4A4A</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/colorDarkGrey</item>
+        <item name="android:textSize">12sp</item>
+        <!--<item name="android:fontFamily">@font/montserrat</item>-->
     </style>
 
     <!-- Generic Toolbar -->
     <style name="genericToolBar">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">?attr/actionBarSize</item>
+        <item name="android:layout_height">75dp</item>
         <item name="android:layout_weight">0</item>
         <item name="android:background">@color/colorPrimary</item>
         <item name="android:minHeight">?attr/actionBarSize</item>
@@ -47,7 +58,7 @@
     <!-- Paper Toolbar -->
     <style name="paperToolBar">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">?attr/actionBarSize</item>
+        <item name="android:layout_height">75dp</item>
         <item name="android:layout_weight">0</item>
         <item name="android:background">@color/colorDeepPurple</item>
         <item name="android:minHeight">?attr/actionBarSize</item>
@@ -68,18 +79,22 @@
     <!-- Begin Paper Button -->
     <style name="PaperButton">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">50dp</item>
-        <item name="android:layout_margin">10dp</item>
+        <item name="android:layout_height">35dp</item>
+        <item name="android:layout_marginTop">10dp</item>
         <item name="android:layout_weight">0</item>
         <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">#fff</item>
         <item name="android:textSize">18sp</item>
     </style>
 
     <!-- Next Question Button -->
     <style name="NextButton">
-        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">35dp</item>
+        <item name="android:layout_margin">10dp</item>
         <item name="android:layout_weight">0</item>
         <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">#fff</item>
         <item name="android:textSize">18sp</item>
     </style>
 
@@ -90,8 +105,8 @@
     </style>
 
     <style name="genericText">
-        <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/colorItemTint</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/colorDarkGrey</item>
     </style>
 
 
