converted project to android X

--- a/app/src/main/res/layout/activity_connection_error.xml
+++ b/app/src/main/res/layout/activity_connection_error.xml
@@ -5,7 +5,7 @@
     android:background="#FF0000"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/connectionErrorToolBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
