--- a/app/src/main/res/layout/activity_paper_summary.xml
+++ b/app/src/main/res/layout/activity_paper_summary.xml
@@ -5,7 +5,7 @@
     android:background="@color/colorLightGrey"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/paperSummaryToolBar"
         style="@style/paperToolBar"
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:text="title"
             android:textColor="@color/colorDarkGrey" />
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
         android:layout_width="match_parent"
