--- a/app/src/main/res/layout/activity_paper.xml
+++ b/app/src/main/res/layout/activity_paper.xml
@@ -5,7 +5,7 @@
     android:background="@android:color/white"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/paperToolBar"
         style="@style/genericToolBar"
         android:layout_width="match_parent"
@@ -29,9 +29,9 @@
 
         </LinearLayout>
 
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/paperRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
