rebranded to brainstein papers

--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -20,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="English Paper 1 (2014)"
+            android:textColor="@color/colorDarkGrey"
             android:textSize="14sp" />
     </android.support.v7.widget.Toolbar>
 
@@ -28,7 +29,7 @@
         android:layout_height="0dp"
         android:layout_margin="10dp"
         android:layout_weight="1"
-        android:background="@drawable/question_background"
+        android:background="@drawable/course_list_item_background"
         android:orientation="vertical">
 
         <TextView
@@ -60,10 +61,12 @@
 
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:padding="5sp">
 
         <Button
             android:id="@+id/rewritePaperButton"
@@ -79,7 +82,7 @@
             style="@style/PaperButton"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:background="@drawable/review_rewrite_button_background"
+            android:background="@drawable/next_button_background"
             android:onClick="onClick"
             android:text="Exit Paper" />
     </LinearLayout>
