--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,10 +8,13 @@
     <color name="colorStudyBlue">#4990E2</color>
 
     <!-- new colors -->
-    <color name="colorPrimary">#10ACDB</color>
-    <color name="colorPrimaryDark">#0FA0CC</color>
-    <color name="colorSecondary">#62BA47</color>
-    <color name="colorLightGrey">#F1F1F1</color>
+    <color name="colorPrimary">#00d4ff</color>
+    <color name="colorPrimaryDark">#6600ff</color>
+    <color name="colorSecondary">#0072ff</color>
+    <color name="colorLightGrey">#f4f5f8</color>
     <color name="colorMediumGrey">#979797</color>
-    <color name="colorDarkGrey">#707070</color>
+    <color name="colorDarkGrey">#222428</color>
+    <color name="colorDanger">#f04141</color>
+    <color name="colorWarning">#ffce00</color>
+    <color name="colorSuccess">#10dc60</color>
 </resources>
