--- a/app/src/main/res/layout/fragment_multiple_choice_question.xml
+++ b/app/src/main/res/layout/fragment_multiple_choice_question.xml
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/questionMCTutorImageButton"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginTop="20dp"
