--- a/app/src/main/res/layout/fragment_essay_question.xml
+++ b/app/src/main/res/layout/fragment_essay_question.xml
@@ -7,11 +7,11 @@
     android:background="@drawable/question_background"
     android:orientation="vertical">
 
-    <com.github.chrisbanes.photoview.PhotoView
-        android:id="@+id/expandedEssayQuestionImage"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone" />
+<!--    <com.github.chrisbanes.photoview.PhotoView-->
+<!--        android:id="@+id/expandedEssayQuestionImage"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:visibility="gone" />-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -72,7 +72,7 @@
                 android:textSize="18sp"
                 android:visibility="gone" />
 
-            <ImageButton
+            <com.github.chrisbanes.photoview.PhotoView
                 android:id="@+id/essayQuestionImageView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
